ctrl-b  h to hide statusbar

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,8 +17,8 @@ set -g set-titles on
 set -g pane-active-border fg=dimgray
 
 unbind r
-unbind C-Up
-bind -n C-Up set-option -g status  
+unbind C-h
+bind -n C-h set-option -g status  
 bind r source-file ~/.tmux.conf
 
 # status bar
