--- a/openbsd/sysctl.conf
+++ b/openbsd/sysctl.conf
@@ -1,6 +1,14 @@
-kern.maxproc=3250
-kern.maxfiles=8192
+kern.maxproc=32768
+kern.maxfiles=65535
 kern.maxthread=5240
+
+kern.seminfo.semmni=1024
+kern.seminfo.semmns=4096
+kern.shminfo.shmseg=1024
+
+kern.shminfo.shmall=3145728
+kern.shminfo.shmmax=2147483647
+kern.shminfo.shmmni=1024
 
 machdep.allowaperture=2
 
